--- a/src/Brematic.Net/Brematic.Net.csproj
+++ b/src/Brematic.Net/Brematic.Net.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,6 +7,16 @@
     <PackageProjectUrl>https://github.com/tefinger/Brematic.Net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/tefinger/Brematic.Net</RepositoryUrl>
     <PackageTags>brematic intertechno brennenstuhl smarthome</PackageTags>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
 </Project>
