--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ test: off
 # AppVeyor will create a release tag if a matching one does not exist
 # hence triggering another build
 skip_tags: true
+skip_branch_with_pr: true
 skip_commits:
   files:
     - .editorconfig
@@ -45,6 +46,14 @@ deploy:
     prerelease: true
     on:
       branch: /feature\/.+/
+  - provider: NuGet
+    api_key:
+      # https://www.appveyor.com/docs/deployment/nuget/#provider-settings
+      secure: SGD3hP3yfalaW0BUJnagU3kZYwJYXO1+iICG9onVFdnqI/Vne4MLB/IqGkGP6vWq
+    skip_symbols: true
+    artifact: packages
+    on:
+      branch: master
 
 # Environment variables
 environment:
