--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ branches:
     # We'll also build whenever there is a new commit on any branch starting with `features/`
     - /feature\/.+/
 build_script:
-  - ps: .\build.ps1 -pack
+  - ps: .\build.ps1 -cover -codecov -pack
 assembly_info:
   # We'll version the binaries and the NuGet package in the build script
   patch: false
@@ -14,6 +14,7 @@ test: off
 # AppVeyor will create a release tag if a matching one does not exist
 # hence triggering another build
 skip_tags: true
+skip_branch_with_pr: true
 skip_commits:
   files:
     - .editorconfig
@@ -45,10 +46,22 @@ deploy:
     prerelease: true
     on:
       branch: /feature\/.+/
+  - provider: NuGet
+    api_key:
+      # https://www.appveyor.com/docs/deployment/nuget/#provider-settings
+      secure: SGD3hP3yfalaW0BUJnagU3kZYwJYXO1+iICG9onVFdnqI/Vne4MLB/IqGkGP6vWq
+    skip_symbols: true
+    artifact: packages
+    on:
+      branch: master
+
 # Environment variables
 environment:
   # No need to pre-warm the `NuGet` cache
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+  CODECOV_TOKEN:
+    secure: dxzoK73OLlDu9F1n8oHT7C/5idf8qniuKOUybjd3WghpR9Gmibu9CN93FAr9okKv
+
 # `install` will run before `build_script`
 install:
   # `dotnet-install.ps1` is available at: https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-install-script
